--- a/docs/team/briyanii.adoc
+++ b/docs/team/briyanii.adoc
@@ -5,16 +5,18 @@
 
 == PROJECT: MooLah
 
----
+'''
 
 == Overview
 
 This portfolio aims to document my contributions to MooLah
 
 MooLah is a desktop expense tracking application, which was morphed from the code of Software Engineering Education's AddressBook - Level 3 used for teaching Software Engineering principles.
-MooLah is a hassle-free expense tracker aimed at NUS students.
 
-The user interacts with it using a Command-Line Interface (CLI), and it has a GUI created with JavaFX. It is written in Java, and has about 17 kLoC.
+MooLah is written in Java and has around 23 kLoC. It aims to provide a streamlined expense tracking solution to NUS students who are more comfortable with
+Command-Line Interfaces (CLI). With features such as auto-completion, and syntax highlighting, and expense analysis features like budgeting, and statistics.
+MooLah provides users an expense tracking solution which is both useful and easy to use.
+
 
 
 == Summary of contributions
@@ -70,7 +72,7 @@ feature, this feature uses a significant use of JavaFx as well.
 
 *Component 4:* Generic commands.
 As mentioned previously, MooLah supports around 30 commands, several of which do similar thing (e.g. There are several commands which
-`add` information to MooLah. In order to differentiate these commands, they require a much longer name to be clear as to
+add information to MooLah use the word 'add'. In order to differentiate these commands, they require a much longer name to be clear as to
 what the command does. This feature allows multiple commands to use the same word and be parsed differently based on the context
 they are used.
 
@@ -97,7 +99,7 @@ https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=briyanii&sort=groupTi
 * *Other contributions*:
 
 ** Project management:
-*** Managed release for https://github.com/AY1920S1-CS2103T-T11-1/main/releases/tag/1.3.2[`v1.3.2`]
+*** Managed release for https://github.com/AY1920S1-CS2103T-T11-1/main/releases/tag/1.3.2[v1.3.2]
 (the release used for Practical Exam Dry Run) on GitHub
 *** In charge of ensuring code is tested.
 *** Designed mock up for inital GUI design
@@ -107,9 +109,8 @@ https://github.com/AY1920S1-CS2103T-T11-1/main/pull/60[#60]
 *** https://github.com/AY1920S1-CS2103T-T11-1/main/pull/271[#271] https://coveralls.io/builds/26885574[65% to 80%] +
 https://github.com/AY1920S1-CS2103T-T11-1/main/pull/247[#247] https://coveralls.io/builds/26731561[46% to 52%]
 //*** Wrote additional tests for existing features to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-** Documentation:
-//*** Did cosmetic tweaks to existing contents of the User Guide: https://github.com[#14]
-
+** Documentation: +
+Made changes to UG diagrams to match changes to the code https://github.com/AY1920S1-CS2103T-T11-1/main/pull/285[#285]
 ** Tools:
 *** Integrated a third party library (RichTextFX) to the project https://github.com/AY1920S1-CS2103T-T11-1/main/pull/93[#93]
 *** Integrated TestFx into the project for Testing GUI components. https://github.com/AY1920S1-CS2103T-T11-1/main/pull/271[#271] +
@@ -129,11 +130,5 @@ include::../UserGuide.adoc[tag=shortcuts]
 |===
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
+include::../DeveloperGuide.adoc[tag=alias]
 
-
-//include::../DeveloperGuide.adoc[tag=dataencryption]
-
-
-
-
-_{Optionally, you may include other projects in your portfolio.}_
